--- a/src/components/Ui/Card/Card.module.scss
+++ b/src/components/Ui/Card/Card.module.scss
@@ -5,6 +5,6 @@
   padding: 25px;
 
   &--black-green {
-    background-color: var(--c-black-green);
+    background-color: var(--c-very-dark-cyan);
   }
 }
