--- a/src/components/Tip/Tip.module.scss
+++ b/src/components/Tip/Tip.module.scss
@@ -1,3 +1,20 @@
 .tip {
-  display: block;
+  background-color: var(--c-very-dark-cyan);
+  border-radius: 4px;
+  color: var(--c-white);
+  font-weight: 700;
+  padding: 10px 0;
+  text-align: center;
+  transition: background-color 0.5s;
+
+  &:hover {
+    background-color: var(--c-light-gray-cyan);
+    color: var(--c-very-dark-cyan);
+    cursor: pointer;
+  }
+
+  &--selected {
+    background-color: var(--c-light-gray-cyan);
+    color: var(--c-very-dark-cyan);
+  }
 }
