--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -1,7 +1,13 @@
 :root {
+  --f-primary: 'Space Mono';
   --font-size: 16px;
-  --c-white: #fff;
-  --c-black-green: rgb(0, 70, 35);
+  --c-strong-cyan: hsl(172, 67%, 45%);
+  --c-very-dark-cyan: hsl(183, 100%, 15%);
+  --c-dark-gray-cyan: hsl(186, 14%, 43%);
+  --c-dark-grayish-cyan: hsl(184, 14%, 56%);
+  --c-light-gray-cyan: hsl(185, 41%, 84%);
+  --c-light-grayish-cyan: hsl(189, 41%, 97%);
+  --c-white: hsl(0, 0%, 100%);
 }
 
 // Breakpoints
