--- a/src/components/TipList/TipList.module.scss
+++ b/src/components/TipList/TipList.module.scss
@@ -1,10 +1,11 @@
 .tip-list {
-  column-gap: 15px;
   display: grid;
+  gap: 10px;
   grid-template-columns: repeat(2, 1fr);
-  row-gap: 10px;
 
   &__title {
+    color: var(--c-dark-gray-cyan);
+    font-size: 16px;
     margin: 0 0 20px;
   }
 
