--- a/src/styles/element/_body.scss
+++ b/src/styles/element/_body.scss
@@ -1,4 +1,5 @@
 body {
+  background-color: var(--c-light-gray-cyan);
   font-family: var(--f-primary), monospace;
   font-size: var(--font-size);
   height: 100vh;
