--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -8,6 +8,7 @@
   --c-light-gray-cyan: hsl(185, 41%, 84%);
   --c-light-grayish-cyan: hsl(189, 41%, 97%);
   --c-white: hsl(0, 0%, 100%);
+  --c-red: #ff7d7d;
 }
 
 // Breakpoints
