--- a/src/components/Tip/Tip.module.scss
+++ b/src/components/Tip/Tip.module.scss
@@ -23,5 +23,10 @@
 
   &__custom {
     width: 100%;
+
+    &::-webkit-input-placeholder {
+      color: var(--c-dark-gray-cyan);
+      font-size: 20px;
+    }
   }
 }
