feat: add responsive styles

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/settings/variables';
+
 .app {
   &__title {
     color: var(--c-dark-gray-cyan);
@@ -10,8 +12,26 @@
     word-break: break-all;
   }
 
+  &__main-card {
+    @media only screen and (min-width: $b-medium) {
+      column-gap: 30px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      margin: 0 auto;
+      max-width: 80%;
+    }
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
+  }
+
+  &__total {
+    @media only screen and (min-width: $b-medium) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
   }
 }
