--- a/src/components/TipList/TipList.module.scss
+++ b/src/components/TipList/TipList.module.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/settings/variables';
+
 .tip-list {
   display: grid;
   gap: 10px;
@@ -13,5 +15,9 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+  }
+
+  @media only screen and (min-width: $b-medium) {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
