--- a/src/components/Ui/Input/Input.module.scss
+++ b/src/components/Ui/Input/Input.module.scss
@@ -5,7 +5,7 @@
   color: var(--c-very-dark-cyan);
   font-size: 27px;
   font-weight: 700;
-  padding: 10px 0;
+  padding: 10px 15px 10px 0;
   text-align: right;
 
   &:focus-visible {
