feat: migrate to typescript

--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -1,13 +1,13 @@
 :root {
   --f-primary: 'Space Mono';
   --font-size: 16px;
-  --c-strong-cyan: hsl(172, 67%, 45%);
-  --c-very-dark-cyan: hsl(183, 100%, 15%);
-  --c-dark-gray-cyan: hsl(186, 14%, 43%);
-  --c-dark-grayish-cyan: hsl(184, 14%, 56%);
-  --c-light-gray-cyan: hsl(185, 41%, 84%);
-  --c-light-grayish-cyan: hsl(189, 41%, 97%);
-  --c-white: hsl(0, 0%, 100%);
+  --c-strong-cyan: hsl(172deg 67% 45%);
+  --c-very-dark-cyan: hsl(183deg 100% 15%);
+  --c-dark-gray-cyan: hsl(186deg 14% 43%);
+  --c-dark-grayish-cyan: hsl(184deg 14% 56%);
+  --c-light-gray-cyan: hsl(185deg 41% 84%);
+  --c-light-grayish-cyan: hsl(189deg 41% 97%);
+  --c-white: hsl(0deg 0% 100%);
   --c-red: #ff7d7d;
 }
 
