--- a/src/components/Ui/Card/Card.module.scss
+++ b/src/components/Ui/Card/Card.module.scss
@@ -1,7 +1,7 @@
 .card {
   background-color: var(--c-white);
   border-radius: 20px;
-  box-shadow: 0px 5px 20px -12px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 20px -12px rgb(0 0 0 / 30%);
   padding: 25px;
 
   &--black-green {
